FIX alignement another penguin

--- a/src/pages/Customize/go-to-another-penguin.module.scss
+++ b/src/pages/Customize/go-to-another-penguin.module.scss
@@ -64,7 +64,7 @@
         .penguins {
             width: 250px;
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: space-between;
             z-index: 0;
 
